Fixed DM, Login, Playing user list, Password hide on firefox ...

--- a/front/src/styles/chat/Chat.scss
+++ b/front/src/styles/chat/Chat.scss
@@ -454,7 +454,8 @@ $orange: orange;
 		}
 
 		.passwordInput {
-			-webkit-text-security: disc;
+			-moz-text-security: circle; /* FireFox */
+			-webkit-text-security: circle; /* Chrome/Safari  */
 		}
 
 		input[type="submit"] // readysubmit
